--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,107 +7,126 @@
     android:background="#1f211d"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btnNum11"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="305dp"
-        android:layout_marginLeft="93dp"
-        android:layout_marginTop="417dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="223dp"
-        android:fontFamily="sans-serif-light"
-        android:text="-"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
-
-    <Button
-        android:id="@+id/btnNum10"
-        android:layout_width="78dp"
-        android:layout_height="0dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="@id/btnNum"
-        android:layout_marginStart="305dp"
-        android:layout_marginLeft="119dp"
-        android:layout_marginTop="314dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginBottom="326dp"
-        android:layout_toRightOf="@id/btnNum"
-        android:fontFamily="sans-serif-light"
-        android:text="+"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
-
-    <Button
-        android:id="@+id/btnNum12"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="305dp"
-        android:layout_marginLeft="93dp"
-        android:layout_marginTop="520dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="120dp"
-        android:fontFamily="sans-serif-light"
-        android:text="x"
-        android:textColor="#FFFFFF"
-        android:textSize="34sp"
-        app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
-
-    <Button
-        android:id="@+id/btnNum13"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="305dp"
-        android:layout_marginLeft="93dp"
-        android:layout_marginTop="619dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="21dp"
-        android:fontFamily="sans-serif-light"
-        android:text="="
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
-
-    <Button
-        android:id="@+id/btnNum9"
-        android:layout_width="262dp"
+    <TextView
+        android:id="@+id/tvDisplay"
+        android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="93dp"
-        android:layout_marginTop="626dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="98dp"
+        android:layout_marginBottom="609dp"
+        android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/btnMin"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="305dp"
+        android:layout_marginTop="417dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="-"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        app:backgroundTint="#3A3C38"
+        app:cornerRadius="40dp" />
+
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="305dp"
+        android:layout_marginTop="322dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="+"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        app:backgroundTint="#3A3C38"
+        app:cornerRadius="40dp" />
+
+    <Button
+        android:id="@+id/btnMul"
+        android:layout_width="71dp"
+        android:layout_height="84dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="305dp"
+        android:layout_marginTop="514dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="x"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        app:backgroundTint="#3A3C38"
+        app:cornerRadius="40dp" />
+
+    <Button
+        android:id="@+id/btnDiv"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="201dp"
+        android:layout_marginTop="610dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="÷"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        app:backgroundTint="#3A3C38"
+        app:cornerRadius="40dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="321dp" />
+
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="514dp"
         android:fontFamily="sans-serif-light"
-        android:paddingVertical="-0dp"
+        android:text="2"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        app:backgroundTint="#3A3C38"
+        app:cornerRadius="40dp" />
+
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="201dp"
+        android:layout_marginTop="514dp"
+        android:fontFamily="sans-serif-light"
+        android:text="1"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        app:backgroundTint="#3A3C38"
+        app:cornerRadius="40dp" />
+
+    <Button
+        android:id="@+id/btn0"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="610dp"
+        android:fontFamily="sans-serif-light"
         android:text="0"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
@@ -117,193 +136,158 @@
         tools:layout_editor_absoluteY="321dp" />
 
     <Button
-        android:id="@+id/btnNum8"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
+        android:id="@+id/btn3"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="201dp"
-        android:layout_marginLeft="93dp"
-        android:layout_marginTop="520dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="121dp"
-        android:fontFamily="sans-serif-light"
-        android:text="1"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
-
-    <Button
-        android:id="@+id/btnNum7"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="520dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="121dp"
-        android:fontFamily="sans-serif-light"
-        android:text="2"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
-
-    <Button
-        android:id="@+id/btnNum6"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="520dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="118dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="514dp"
         android:fontFamily="sans-serif-light"
         android:text="3"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
         app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
+        app:cornerRadius="40dp" />
 
     <Button
-        android:id="@+id/btnNum5"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
+        android:id="@+id/btn6"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
         android:layout_marginStart="201dp"
-        android:layout_marginLeft="93dp"
         android:layout_marginTop="417dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="223dp"
         android:fontFamily="sans-serif-light"
         android:text="6"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
         app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
+        app:cornerRadius="40dp" />
 
     <Button
-        android:id="@+id/btnNum4"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
+        android:id="@+id/btn5"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="108dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="110dp"
         android:layout_marginTop="417dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="223dp"
         android:fontFamily="sans-serif-light"
         android:text="5"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
         app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
+        app:cornerRadius="40dp" />
 
     <Button
-        android:id="@+id/btnNum3"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
+        android:id="@+id/btn4"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="15dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="19dp"
         android:layout_marginTop="417dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="223dp"
         android:fontFamily="sans-serif-light"
         android:text="4"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
         app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
+        app:cornerRadius="40dp" />
 
     <Button
-        android:id="@+id/btnNum1"
-        android:layout_width="78dp"
-        android:layout_height="91dp"
+        android:id="@+id/btn7"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="314dp"
-        android:layout_marginEnd="318dp"
-        android:layout_marginBottom="326dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="322dp"
         android:fontFamily="sans-serif-light"
         android:text="7"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
         app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
+        app:cornerRadius="40dp" />
 
     <Button
-        android:id="@+id/btnNum2"
-        android:layout_width="78dp"
-        android:layout_height="0dp"
+        android:id="@+id/btn9"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="@id/btnNum"
+        android:layout_centerVertical="true"
         android:layout_marginStart="201dp"
-        android:layout_marginLeft="93dp"
-        android:layout_marginTop="314dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginBottom="326dp"
-        android:layout_toRightOf="@id/btnNum"
+        android:layout_marginTop="322dp"
         android:fontFamily="sans-serif-light"
         android:text="9"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
         app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
+        app:cornerRadius="40dp" />
 
     <Button
-        android:id="@+id/btnNum"
-        android:layout_width="78dp"
-        android:layout_height="0dp"
+        android:id="@+id/btn8"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="@id/btnNum1"
-        android:layout_marginStart="108dp"
-        android:layout_marginLeft="93dp"
-        android:layout_marginTop="314dp"
-        android:layout_marginEnd="225dp"
-        android:layout_marginBottom="326dp"
-        android:layout_toRightOf="@id/btnNum1"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="322dp"
         android:fontFamily="sans-serif-light"
         android:text="8"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
         app:backgroundTint="#3A3C38"
-        app:cornerRadius="40dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="321dp" />
+        app:cornerRadius="40dp" />
+
+    <Button
+        android:id="@+id/btnClear"
+        android:layout_width="71dp"
+        android:layout_height="86dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="610dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="Clear"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
+        app:backgroundTint="#3A3C38"
+        app:cornerRadius="40dp" />
+
+    <Button
+        android:id="@+id/btnEqu"
+        android:layout_width="71dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="305dp"
+        android:layout_marginTop="610dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="="
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        app:backgroundTint="#3A3C38"
+        app:cornerRadius="40dp" />
+
+    <TextView
+        android:id="@+id/tvControl"
+        android:layout_width="367dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginBottom="487dp"
+        android:textColor="#FFFFFF" />
 </RelativeLayout>
