--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,27 @@
 
     <TextView
         android:id="@+id/tvDisplay"
-        android:layout_width="367dp"
-        android:layout_height="wrap_content"
+        android:layout_width="368dp"
+        android:layout_height="82dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="98dp"
-        android:layout_marginBottom="609dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginBottom="573dp"
         android:textAlignment="viewEnd"
         android:textColor="#FFFFFF"
         android:textSize="48sp" />
+
+    <Button
+        android:id="@+id/btnChrome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MMCM Blackboard"
+        android:onClick="openChrome"
+        />
+
 
     <Button
         android:id="@+id/btnMin"
@@ -279,15 +289,29 @@
 
     <TextView
         android:id="@+id/tvControl"
-        android:layout_width="367dp"
-        android:layout_height="wrap_content"
+        android:layout_width="368dp"
+        android:layout_height="91dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginBottom="487dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="440dp"
         android:textAlignment="viewEnd"
         android:textColor="#FFFFFF"
         android:textSize="48sp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="197dp"
+        android:layout_marginTop="9dp"
+        android:text="Blackboard Shortcut"
+        android:textColor="#F6F0F0"
+        android:textSize="20sp" />
+
 </RelativeLayout>
