--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -310,7 +310,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="197dp"
         android:layout_marginTop="9dp"
-        android:text="Blackboard Shortcut"
+        android:text="Blackboard Website"
         android:textColor="#F6F0F0"
         android:textSize="20sp" />
 
